test/tests/errors/error-for-step-not-int.sm
// true
// false
// false
/**/
/**/

program {
    var x: int = 0;
    for (x = true step 1 until 10) {}
}